# base-cmake-project

./: .gitignore  CMakeLists.txt  README.md  build.bat
scripts/: build.sh
src/: main.cpp
src/templateHeader/: infoHeader.hpp.in
